# TINlab-ML2425-TORCS

./: .gitignore  Dockerfile.fixed  README.md  debug-client.sh  practice.xml  run-client.sh
scr-client-python/: DDPG.py  README.md  careful_dqn_trainer.py  client.py  continuous_dqn_trainer.py  expert_plus_rl_trainer.py  expert_rl_continuous_trainer.py  pyproject.toml  requirements.txt  run_careful_model.py  run_continuous_model.py  run_dqn_model.py  run_expert_model.py  simple_dqn_trainer.py  supervised_trainer.py
scr-client-python/drivers/: __init__.py  ml_driver.py  simple_driver.py
scr-client-python/environments/: __init__.py  torcs_env.py
scr-client-python/examples/: stable_baselines_example.py  train_dqn.py
scr-client-python/models/: careful_dqn_episode_10.pth  careful_dqn_episode_20.pth  careful_dqn_episode_30.pth  careful_dqn_final.pth  continuous_dqn_episode_100.pth  continuous_dqn_episode_20.pth  continuous_dqn_episode_40.pth  continuous_dqn_episode_60.pth  continuous_dqn_episode_80.pth  continuous_dqn_final.pth  ddpg_actor_ep10.pth  ddpg_actor_ep100.pth  ddpg_actor_ep1000.pth  ddpg_actor_ep110.pth  ddpg_actor_ep120.pth  ddpg_actor_ep130.pth  ddpg_actor_ep140.pth  ddpg_actor_ep150.pth  ddpg_actor_ep160.pth  ddpg_actor_ep170.pth  ddpg_actor_ep180.pth  ddpg_actor_ep190.pth  ddpg_actor_ep20.pth  ddpg_actor_ep200.pth  ddpg_actor_ep210.pth  ddpg_actor_ep220.pth  ddpg_actor_ep230.pth  ddpg_actor_ep240.pth  ddpg_actor_ep250.pth  ddpg_actor_ep260.pth  ddpg_actor_ep270.pth  ddpg_actor_ep280.pth  ddpg_actor_ep290.pth  ddpg_actor_ep30.pth  ddpg_actor_ep300.pth  (+88 more)
(+12 files in other folders)
