[project]
name = "scr-client-python"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "black>=21.0.0",
    "flake8>=4.0.0",
    "gym>=0.21.0",
    "matplotlib>=3.3.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "pytest>=6.0.0",
    "scikit-learn>=1.7.0",
    "stable-baselines3>=1.5.0",
    "tensorboard>=2.8.0",
    "torch>=1.8.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
